RESOLVED FIXED106852
RenderView does not need to override computePreferredLogicalWidth
https://bugs.webkit.org/show_bug.cgi?id=106852
Summary RenderView does not need to override computePreferredLogicalWidth
Ojan Vafai
Reported 2013-01-14 18:21:26 PST
RenderView does not need to override computePreferredLogicalWidth
Attachments
Patch (3.19 KB, patch)
2013-01-14 18:24 PST, Ojan Vafai
no flags
Ojan Vafai
Comment 1 2013-01-14 18:24:20 PST
Levi Weintraub
Comment 2 2013-01-15 09:45:47 PST
Comment on attachment 182674 [details] Patch Awesome!!
WebKit Review Bot
Comment 3 2013-01-15 09:55:48 PST
Comment on attachment 182674 [details] Patch Clearing flags on attachment: 182674 Committed r139749: <http://trac.webkit.org/changeset/139749>
WebKit Review Bot
Comment 4 2013-01-15 09:55:52 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.