RenderView does not need to override computePreferredLogicalWidth https://bugs.webkit.org/show_bug.cgi?id=106852

Reviewed by Levi Weintraub.

Calling minPreferredLogicalWidth calls computePreferredLogicalWidth,
which happens a few lines later in layoutWithFlattening. No need
to call it explicitly.

* rendering/RenderFrameBase.cpp:
(WebCore::RenderFrameBase::layoutWithFlattening):
* rendering/RenderView.cpp:
* rendering/RenderView.h:


Canonical link: https://commits.webkit.org/125134@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139749 268f45cc-cd09-0410-ab3c-d52691b4dbfc